# fastapi_from_zero

./: .gitignore  pyproject.toml
fastapi_from_zero/: app.py
tests/: test_app.py
