[tool.poetry]
name = "fastapi-from-zero"
version = "0.1.0"
description = ""
authors = ["gabrielhmango <gabrielhmango@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
fastapi = {extras = ["standard"], version = "^0.115.5"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[tool.taskipy.tasks]
run = "fastapi dev fastapi_from_zero/app.py"
pre_test = "task format && task lint"
test = "pytest --cov=fastapi_from_zero -vv"
post_test = "coverage html"
format = "ruff check . --fix && ruff format ."
lint = "ruff check . && ruff check . --diff"
commit = "task test && git add . && git status && git commit -m '{msg}' && git push"

[tool.coverage.run]
source = ['fastapi_from_zero']

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"